# WriteNow

api/: .gitignore  pyproject.toml  requirements.txt
api/app/: database.py  main.py  ml.py  preprocessing.py
api/app/router/: router.py
api/app/router/api/: api.py
api/app/router/api/books/: books.py
api/app/router/api/trends/: trends.py
api/notebooks/: 240519-alska.ipynb  240522-alska.ipynb
crawler/: pyproject.toml
crawler/bookstore/: pipelines.py
crawler/bookstore/spiders/: aladin_best.py
db/: seed.sql
db/migrations/: 20240519-migration.sql
db/write_now/: book_categories.sql  book_categories_of_books.sql  book_sales_scores.sql  books.sql  books_in_bookstores.sql  bookstores.sql  raw_books.sql  v_raw_books.sql
web/: package-lock.json  package.json
web/src/: App.css  BookTable.js  Chart.js  GenerateImage.js  GenreTable.js  KeywordTable.js  Login.js  ResponsiveAppBar.js  Search.js  SearchOption.js  SearchResult.js  SearchTable.js  SearchText.js  SharedInput.js  WholeBookTrend.js  WholeKeywordTrend.js  YearTrend.js  api.js  index.js  styles.css
web/src/example/: Dashboard.js  Table.js
